--- a/style.css
+++ b/style.css
@@ -147,6 +147,13 @@ body {
 
 /* Feature */
 
+.fe-box-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 #features .fe-box {
   width: 180px;
   text-align: center;
@@ -1782,7 +1789,7 @@ footer a:hover {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 499px) {
   h1 {
     font-size: 25px;
     line-height: 28px;
